启动页及首页修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">联侠</string>
+    <string name="app_name">微新风</string>
     <string name="register">点击"立即注册"，即表示你同意遵守欧众</string>
     <string name="dingshikongzhipeiwangmoshi">开机长按电器定时按钮</string>
     <string name="kaiguankongzhipeiwangmoshi">开机长按电器开关按钮</string>
